third_party/move/move-compiler-v2/tests/more-v1/parser/invalid_named_address_declaration.exp

Diagnostics:
error: unexpected token
  ┌─ tests/more-v1/parser/invalid_named_address_declaration.move:3:13
  │
3 │ address Addr;
  │             ^
  │             │
  │             Unexpected ';'
  │             Expected '{'
